# NoteApp-with-MCPServer

./: README.md  agent.py  app.py  main.py  pyproject.toml
